fix unleash (#739)
* fix unleash

* fix test

* move

* fix test

Co-authored-by: Jan-Olav Eide <jan-olav.eide@nav.no>